--- a/src/App.css
+++ b/src/App.css
@@ -1,283 +1,498 @@
-.App {
-    height: 100vh;
-    background-color: #0d1116;
-    text-align: center;
-    color: white;
-  }
-  
-  p {
-    margin:0;
-  }
-  
-  .container {
-    height: 100%;
-    background-color: #807c7c;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .header-container {
-    padding-top: 30px;
-  }
-  
-  header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 10px 10px 10px 10px;
-  }
-  
-  .title {
-    margin: 0;
-    font-size: 35px;
-    font-weight: bold;
-    color: white;
-  }
-  
-  .subtitle {
-    font-size: 25px;
-    color: white;
-  }
-  
-  .left{
-    text-align: left;
-    margin-left: 10%;
-  }
-  
-  .logo{
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-  }
-  
-  .right{
-    display: flex;
-    background: black;
-    border-radius: 16px;
-    padding: 12px 20px;
-    height: 99%;
-    margin-right: 10%;
-    margin-top: 10px;
-  }
-  
-  .content-container {
-    background-color: #a200d6;
-  }
-  
-  .cta-button {
-    height: 45px;
-    border: 0;
-    width: auto;
-    padding-left: 40px;
-    padding-right: 40px;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    color: white;
-  }
-  
-  .connect-wallet-container {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    max-width: 550px;
-  }
+* {
+  box-sizing: border-box;
+}
 
-  .connect-wallet-contents {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    max-width: 550px;
-    padding-bottom: 50px;
-  }
-  
-  .connect-wallet-container img {
-    padding-bottom: 20px;
-  }
-  
-  .connect-wallet-button {
-    background-image: linear-gradient(
-      to right,
-      #ff8177 0%,
-      #ff867a 0%,
-      #ff8c7f 21%,
-      #f99185 52%,
-      #cf556c 78%,
-      #b12a5b 100%
-    );
-    background-size: 200% 200%;
-    animation: gradient-animation 4s ease infinite;
-  }
-  
-  .mint-button {
-    background: -webkit-linear-gradient(left, #a200d6, #ff6fdf);
-    font-size: 18px;
-    background-size: 200% 200%;
-    animation: gradient-animation 4s ease infinite;
-    margin: 20px 10px;
-    border-radius: 20px;
-    padding: 0px 2rem;
-  }
-  
-  .mint-button:disabled{
-    background: #550072;
-    color: rgb(209, 209, 209);
-    cursor: not-allowed;
-  }
-  
-  .mint-row{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  .edit-button{
-    border-radius: 50%;
-    cursor: pointer;
-    margin-left: 3px;
-    top: 20px;
-    border: 0px;
-    font-size: 12px;
-    background-color: transparent;
-  }
-  
-  .edit-icon{
-    width: 12px;
-  }
-  
-  
-  .footer-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 30px;
-  }
-  
-  .twitter-logo {
-    width: 35px;
-    height: 35px;
-  }
-  
-  .footer-text {
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-  }
-  
-  .form-container{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .first-row{
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-  
-  }
-  
-  .tld {
-    position: absolute;
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    /* left: -70px; */
-    right: 22px;
-    margin: 0;  
-    padding: 0;
-    margin-bottom: 13px;
-  }
-  
-  .mint-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .mint-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 15px;
-    border-radius: 5px;
-    margin: 10px 15px;
-    font-size: 18px;
-    background-color: #c4b7fa;
-    color: black;
-    min-width: 150px;
-    max-width: fit-content;
-    box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.2);
-  }
-  
-  /* Different background-colour for every nth mint-item */
-  .mint-item:nth-child(2n) {
-    background-color: lightblue;
-  }
-  
-  .mint-item:nth-child(3n) {
-    background-color: lightpink;
-  }
-  
-  .mint-item:nth-child(5n) {
-    background-color: lightgreen;
-  }
-  
-  .link{
-    color: black;
-    text-decoration: none;
-  }
-  
-  .underlined{
-    text-decoration: underline;
-  }
-  
-  .underlined:hover{
-    cursor: pointer;
-  }
-  
-  /* KeyFrames */
-  @-webkit-keyframes gradient-animation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @-moz-keyframes gradient-animation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  @keyframes gradient-animation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
+body {
+  margin: 0;
+  font-family: "Hiragino Kaku Gothic ProN", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.clear {
+  clear: left;
+}
+
+.container {
+  max-width: 1170px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.top-wrapper {
+  padding: 100px 0 100px 0;
+  background-image: url(medical_care.jpg);
+  background-size: cover;
+  color: rgb(0, 0, 0);
+  text-align: center;
+}
+
+.top-wrapper h1 {
+  opacity: 0.7;
+  font-size: 45px;
+  letter-spacing: 5px;
+  font-size: 24px;
+}
+
+.top-wrapper p {
+  opacity: 0.7;
+}
+
+.top-text {
+  background-color: rgb(181, 225, 255);
+  /*background-color: rgb(0, 153, 255);
+  background-color: #ff8c7f;*/
+}
+
+.btn-wrapper {
+  text-align: center;
+  margin: 20px 0;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
+}
+
+.signup {
+  background-color: #239b76;
+}
+
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: #55acee;
+}
+
+.btn {
+  padding: 8px 24px;
+  color: white;
+  display: inline-block;
+  opacity: 0.8;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.fa {
+  margin-right: 5px;
+}
+
+header {
+  height: 100px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.logo {
+  width: 360px;
+  margin-top: 5px;
+}
+
+.header-left {
+  float: left;
+}
+
+.header-right {
+  float: right;
+  margin-right: -25px;
+}
+
+.header-right a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+.header-right a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+/* menu-iconのCSSを貼り付けてください */
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  /* displayをnoneに指定してください */
+  display: none;
+}
+
+
+.lesson-wrapper {
+  padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+
+.heading {
+  padding-top: 80px;
+  padding-bottom: 50px;
+  color: #5f5d60;
+}
+
+.heading h2 {
+  font-weight: normal;
+}
+
+.lesson {
+  float: left;
+  width: 25%;
+}
+
+.lesson-icon {
+  position: relative;
+}
+
+.lesson-icon p {
+  position: absolute;
+  top: 44%;
+  width: 100%;
+  color: white;
+}
+
+.text-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 15px;
+  font-size: 13px;
+  color: #b3aeb5;
+}
+
+.heading h3 {
+  font-weight: normal;
+}
+
+.message-wrapper {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
+  text-align: center;
+}
+
+.message {
+  padding: 15px 40px;
+  background-color: #5dca88;
+  box-shadow: 0 7px #1a7940;
+}
+
+.message:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
+}
+
+footer img {
+  width: 125px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+}
+
+footer {
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+.header-container {
+  padding-top: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.left{
+  margin-left: 10px;
+}
+
+.logo_polygon{
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.right{
+  display: flex;
+  flex-direction: row;
+  background: black;
+  border-radius: 16px;
+  padding: 10px 20px;
+  height: 99%;
+  margin-right: 10px;
+}
+
+.right p{
+  margin-top: 0px;
+  margin-bottom: 0px;
+  color: white;
+}
+
+.mar {
+  margin-top: 40px;
+}
+
+.cta-button {
+  /*box-shadow: 0px 5px #8f182c;
+  box-shadow: 0px 5px #868686;*/
+  height: 45px;
+  border: 0;
+  width: auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 5px;
+}
+
+.cta-button:active {
+  box-shadow: none;
+  position: relative;
+  top: 5px;
+}
+
+.cta-button2 {
+  /*box-shadow: 0px 5px #8f182c;
+  box-shadow: 0px 5px #868686;*/
+  height: 45px;
+  border: 0;
+  width: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 5px;
+}
+
+.cta-button2:active {
+  box-shadow: none;
+  position: relative;
+  top: 5px;
+}
+
+.cta-button3 {
+  /*box-shadow: 0px 5px #8f182c;
+  box-shadow: 0px 5px #868686;*/
+  height: 45px;
+  border: 0;
+  width: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 1px;
+}
+
+.cta-button3:active {
+  box-shadow: none;
+  position: relative;
+  top: 5px;
+}
+
+.connect-wallet-button {
+  background-image: linear-gradient(
+    to right,
+    #ff8177 0%,
+    #ff867a 0%,
+    #ff8c7f 21%,
+    #f99185 52%,
+    #cf556c 78%,
+    #b12a5b 100%
+  );
+  background-size: 200% 200%;
+  animation: gradient-animation 4s ease infinite;
+}
+
+.connect-wallet-button2 {
+  background-image: linear-gradient(
+    to right,
+    #a077ff 0%,
+    #9c86cf 0%,
+    #a16fe2 21%,
+    #9a85f9 52%,
+    #5d55cf 78%,
+    #3e2ab1 100%
+  );
+  background-size: 200% 200%;
+  animation: gradient-animation 4s ease infinite;
+}
+
+.mint-button {
+  background: -webkit-linear-gradient(left, #a200d6, #ff6fdf);
+  font-size: 18px;
+  background-size: 200% 200%;
+  animation: gradient-animation 4s ease infinite;
+  margin: 20px 10px;
+  border-radius: 20px;
+  padding: 0px 2rem;
+}
+
+.mint-button:disabled{
+  background: #550072;
+  color: rgb(209, 209, 209);
+  cursor: not-allowed;
+}
+
+.postButton {
+  /*background: -webkit-linear-gradient(-70deg, hsl(181, 100%, 73%) 0%, #64afff 100%);*/
+  background-image: linear-gradient(
+    to right,
+    #77e4ff 0%,
+    #7aceff 0%,
+    #7fc1ff 21%,
+    #8596f9 52%,
+    #5d55cf 78%,
+    #3e2ab1 100%
+  );
+  background-size: 200% 200%;
+  animation: gradient-animation 4s ease infinite;
+  margin-top: 16px;
+  padding: 8px;
+  border: 0;
+  border-radius: 5px;
+
+  height: 45px;
+  border: 0;
+  width: auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  letter-spacing: 5px;
+}
+
+.pages-for-second-pages {
+  height:auto;
+  width: 80%;
+  margin: 0 auto;
+  max-width: 800px;
+}
+
+.pages-for-second-pages p, h1 {
+  text-align: center;
+}
+.form-container p {
+  text-align: left;
+}
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+.form-container label{
+  font-size: 20px;
+}
+
+#form-container-name{
+  border: 0;
+  border-radius: 5px;
+  background-color: #e7e7e7;
+  color: black;
+  letter-spacing: 1px;
+  font-size: 26px;
+  width: 150px;
+  margin: 10px;
+  padding: 10px 20px;
+}
+
+#form-container-name2 {
+  border: 0;
+  border-radius: 5px;
+  background-color: #e7e7e7;
+  color: black;
+  letter-spacing: 1px;
+  font-size: 26px;
+  width: 350px;
+  margin: 10px;
+  padding: 10px 20px;
+}
+
+#form-container-name-edit{
+  border: 0;
+  border-radius: 5px;
+  background-color: #e7e7e7;
+  color: black;
+  letter-spacing: 1px;
+  font-size: 15px;
+  width: 75px;
+  margin: 10px;
+  padding: 10px 20px;
+}
+
+.radio-button-field {
+  border: 0;
+  border-radius: 12px;
+  color: rgb(0, 0, 0);
+  letter-spacing: 1px;
+  font-size: 20px;
+  margin-bottom: 10px;
+  padding: 10px 10px;
+}
+
+input::placeholder {
+  color: gray;
+  letter-spacing: 2px;
+}
+
+input:focus {
+  outline: none;
+}
+
+.radio-label {
+  margin: 10px;
+}
+
+#color-red {
+  color: rgb(139, 33, 33);
+}
+
+th {
+  border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.textcenter{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.textsize20px{
+  font-size: 20px;
+}
+
+.display-between {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.applicant-area{
+  background-color: #f1f1f1;
+  color: #0d1116;
+  margin-top: 16px;
+  padding: 8px;
+}
